--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body class="bg-primary">
+<body class="bg-dark">
   <app-root></app-root>
 </body>
 </html>
