--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
 
-  <body class="bg-dark">
+  <body>
     <app-root></app-root>
   </body>
 </html>
