adding meta description

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,11 @@
       gtag("config", "UA-128577811-3");
     </script>
     <meta charset="utf-8" />
+    <meta
+      name="description"
+      content="A simple and free tool for Objectives and Key Results. Keep track of
+                your personal goals or invite team mates to collaborate."
+    />
     <title>Pure OKRs</title>
     <base href="/" />
 
