updating meta description

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <meta charset="utf-8" />
     <meta
       name="description"
-      content="A simple and free tool for Objectives and Key Results. Keep track of
+      content="Pure Objectives and Key Results. Pure OKRs is a simple and free tool for Objectives and Key Results. Keep track of
                 your personal goals or invite team mates to collaborate."
     />
     <title>Pure OKRs</title>
